src/static/css/input.css
@import "tailwindcss";
@source "../js/*.js";
@source "./input.css";
@source "../../templates/*.html";
@source "../../templates/includes/*.html";
@plugin "daisyui" {
  themes: corporate --default, luxury --prefersdark;
}
@plugin "daisyui/theme" {
  name: "custom";
  default: true; /* Define como tema padrão */
  color-scheme: light;

  --color-primary: #1e3a8a;
  --color-primary-content: #ffffff;

  --color-secondary: #d6b070;
  --color-secondary-content: #1e3a8a;

  --color-accent: #2563eb;
  --color-accent-content: #ffffff;

  --color-neutral: #334155;
  --color-neutral-content: #f1f5f9;

  --color-base-100: #ffffff;
  --color-base-200: #f3f4f6;
  --color-base-300: #e5e7eb;
  --color-base-content: #1e293b;

  --color-info: #0e7cff;
  --color-success: #15803d;
  --color-warning: #d97706;
  --color-error: #b91c1c;

  --radius-selector: 0.5rem;
  --radius-field: 0.25rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 1;
  --noise: 0;
}

@layer components {
  section {
    @apply relative flex items-center h-[calc(100vh-64px)] w-full;
  }
}

@layer utilities {
  #glow-hero-1 {
    background: radial-gradient(
      circle at 80% 20%,
      color-mix(in srgb, var(--color-accent) 90%, var(--color-primary)) 0%,
      transparent 95%
    );
  }

  #glow-hero-2 {
    background: radial-gradient(
      circle at 20% 80%,
      color-mix(in srgb, var(--color-primary) 95%, transparent) 0%,
      transparent 90%
    );
  }
}

